RESOLVED FIXED 174467
Incorrect assertion in JSC::CallLinkInfo::callTypeFor
https://bugs.webkit.org/show_bug.cgi?id=174467
Summary Incorrect assertion in JSC::CallLinkInfo::callTypeFor
Michael Catanzaro
Reported 2017-07-13 11:02:10 PDT
In CallLinkInfo::callTypeFor, the assertion ASSERT(opcodeID == op_tail_call_varargs || op_tail_call_forward_arguments) should surely be ASSERT(opcodeID == op_tail_call_varargs || opcodeID == op_tail_call_forward_arguments). Currently it always passes because op_tail_call_forward_arguments is nonzero. This was introduced in r205462. It's found by a new GCC warning: [522/5861] Building CXX object Source/...ptCore.dir/bytecode/CallLinkInfo.cpp.o In file included from ../../Source/WTF/wtf/StdLibExtras.h:33:0, from ../../Source/WTF/wtf/FastMalloc.h:26, from ../../Source/JavaScriptCore/config.h:31, from ../../Source/JavaScriptCore/bytecode/CallLinkInfo.cpp:26: ../../Source/JavaScriptCore/bytecode/CallLinkInfo.cpp: In static member function ‘static JSC::CallLinkInfo::CallType JSC::CallLinkInfo::callTypeFor(JSC::OpcodeID)’: ../../Source/JavaScriptCore/bytecode/CallLinkInfo.cpp:54:48: warning: enum constant in boolean context [-Wint-in-bool-context] ASSERT(opcodeID == op_tail_call_varargs || op_tail_call_forward_arguments); ^ ../../Source/WTF/wtf/Assertions.h:296:11: note: in definition of macro ‘ASSERT’ if (!(assertion)) { \ ^~~~~~~~~
Attachments
Patch (1.36 KB, patch)
2017-07-13 11:03 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2017-07-13 11:03:42 PDT
Michael Catanzaro
Comment 2 2017-07-13 11:04:08 PDT
Let's hope the assertion does not get hit now that it will be active!
WebKit Commit Bot
Comment 3 2017-07-13 13:39:36 PDT
Comment on attachment 315358 [details] Patch Clearing flags on attachment: 315358 Committed r219462: <http://trac.webkit.org/changeset/219462>
WebKit Commit Bot
Comment 4 2017-07-13 13:39:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.