Incorrect assertion in JSC::CallLinkInfo::callTypeFor https://bugs.webkit.org/show_bug.cgi?id=174467

Reviewed by Saam Barati.

* bytecode/CallLinkInfo.cpp:
(JSC::CallLinkInfo::callTypeFor):


Canonical link: https://commits.webkit.org/191290@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219462 268f45cc-cd09-0410-ab3c-d52691b4dbfc